he corregido algunas cosas que faltaban

--- a/src/app/componentes/catalogo/gafas/gafas.component.html
+++ b/src/app/componentes/catalogo/gafas/gafas.component.html
@@ -1,68 +1,106 @@
 <app-nabvar></app-nabvar>
 <br><br><br><br><br>
-<div class="pagina-producto-container">
-    <div class="columna-izquierda">
-      <img src="assets/img/producto3.jpg" alt="Gafas VR UltraVision">
-  
-      <!-- Selectores para alternativas -->
-      <label>Color:</label>
-      <select id="color" name="color">
-        <option>Negro</option>
-        <option>Plateado</option>
-        <option>Amarillo</option>
-        <option>Blanco</option>
-      </select>
-  
-      <!-- Sección de Especificaciones Técnicas -->
-      <section class="especificaciones">
-        <h2>Especificaciones Técnicas</h2>
-        <ul>
-          <li>Tecnología de Realidad Virtual</li>
-          <li>Resolución de Pantalla: Ultra HD</li>
-          <li>Seguimiento Ocular y Gestual</li>
-          <li>Batería de larga duración para sesiones extensas</li>
-          <li>Diseño Ergonómico y Elegante</li>
-          <li>Conectividad Avanzada para una experiencia sin interrupciones</li>
-          <li>Almacenamiento expandible para tu biblioteca virtual</li>
-          <li>Sistema operativo rápido y eficiente</li>
-        </ul>
-      </section>
-  
-      <label for="talla">Capacidad:</label>
-      <select id="capacidad" name="capacidad">
-        <option>64 GB</option>
-        <option>128 GB</option>
-        <option>256 GB</option>
-        <option>512 GB</option>
-      </select>
+<div class="container">
+  <div class="row">
+
+    <!-- Modelo de gafas VR 1 -->
+    <div class="col-md-6 mb-4">
+      <div class="card h-100">
+        <img src="assets\img\gafas\gafas (3).jpg" width="400" height="300" class="card-img-top" alt="Gafas VR 1">
+        <div class="card-body">
+          <h5 class="card-title">Gafas de Realidad Virtual Básicas</h5>
+          <p class="card-text">Las gafas de realidad virtual básicas ofrecen una experiencia inmersiva a un precio asequible. Perfectas para explorar mundos virtuales y disfrutar de contenido 3D.</p>
+          <p class="card-text">Especificaciones técnicas:</p>
+          <ul>
+            <li>Compatibilidad: Smartphone</li>
+            <li>Lentes ajustables</li>
+            <li>Correa ajustable para la cabeza</li>
+          </ul>
+          <p class="card-text">Características destacadas:</p>
+          <ul>
+            <li>Amplia variedad de aplicaciones disponibles</li>
+            <li>Fácil de usar y configurar</li>
+            <li>Compatible con la mayoría de los smartphones</li>
+          </ul>
+          <a href="/carrito" class="btn btn-success">Comprar Ahora</a>
+        </div>
+      </div>
     </div>
-  
-    <div class="columna-derecha">
-      <h2>Gafas VR UltraVision - Tecnología Avanzada</h2>
-      <p>Explora la última revolución en experiencias virtuales con nuestras Gafas VR UltraVision, un hito en la tecnología de realidad virtual. Con características vanguardistas y un diseño futurista, este dispositivo transformará por completo tu manera de sumergirte en mundos virtuales.</p>
-      <p class="precio">Precio: $499.99</p>
-      <a href="/carrito" class="add-to-cart">Agregar al Carrito</a>
-      <a href="/carrito" class="buy-now-button">Comprar Ahora</a>
-  
-      <!-- Sección de Características Destacadas -->
-      <section>
-        <h2>Características Destacadas</h2>
-        <ul>
-          <li>Experiencia de realidad virtual de última generación</li>
-          <li>Pantallas de alta resolución para una inmersión total</li>
-          <li>Cámara integrada con seguimiento ocular y gestual</li>
-          <li>Batería de larga duración para sesiones extensas</li>
-          <li>Diseño ergonómico y elegante</li>
-          <li>Conectividad avanzada para una experiencia sin interrupciones</li>
-          <li>Almacenamiento expandible para tu biblioteca virtual</li>
-          <li>Sistema operativo rápido y eficiente para una navegación fluida</li>
-        </ul>
-      </section>
 
- </div>
- </div>
+    <!-- Modelo de gafas VR 2 -->
+    <div class="col-md-6 mb-4">
+      <div class="card h-100">
+        <img src="assets\img\gafas\gafas (2).jpg" width="400" height="300" class="card-img-top" alt="Gafas VR 2">
+        <div class="card-body">
+          <h5 class="card-title">Gafas de Realidad Virtual Avanzadas</h5>
+          <p class="card-text">Las gafas de realidad virtual avanzadas ofrecen una experiencia inmersiva de alta calidad. Con tecnología avanzada y comodidad ergonómica, te sumergirán en otro mundo.</p>
+          <p class="card-text">Especificaciones técnicas:</p>
+          <ul>
+            <li>Compatibilidad: PC, consolas</li>
+            <li>Resolución de pantalla mejorada</li>
+            <li>Seguimiento de movimiento</li>
+          </ul>
+          <p class="card-text">Características destacadas:</p>
+          <ul>
+            <li>Experiencia de juego realista</li>
+            <li>Controladores táctiles incluidos</li>
+            <li>Audio envolvente integrado</li>
+          </ul>
+          <a href="/carrito" class="btn btn-success">Comprar Ahora</a>
+        </div>
+      </div>
+    </div>
 
- 
+    <!-- Modelo de gafas VR 3 -->
+    <div class="col-md-6 mb-4">
+      <div class="card h-100">
+        <img src="assets\img\gafas\gafas (4).jpg" width="400" height="300" class="card-img-top" alt="Gafas VR 3">
+        <div class="card-body">
+          <h5 class="card-title">Gafas de Realidad Virtual para Entretenimiento</h5>
+          <p class="card-text">Las gafas de realidad virtual para entretenimiento están diseñadas para ofrecer una experiencia inigualable al ver películas, videos y eventos en 360 grados desde la comodidad de tu hogar.</p>
+          <p class="card-text">Especificaciones técnicas:</p>
+          <ul>
+            <li>Compatibilidad: Smartphones, consolas</li>
+            <li>Lentes de alta calidad</li>
+            <li>Audio integrado</li>
+          </ul>
+          <p class="card-text">Características destacadas:</p>
+          <ul>
+            <li>Amplia biblioteca de contenido VR</li>
+            <li>Comodidad para uso prolongado</li>
+            <li>Experiencia cinematográfica inmersiva</li>
+          </ul>
+          <a href="/carrito" class="btn btn-success">Comprar Ahora</a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Modelo de gafas VR 4 -->
+    <div class="col-md-6 mb-4">
+      <div class="card h-100">
+        <img src="assets\img\gafas\gafas (8).jpg" width="400" height="300" class="card-img-top" alt="Gafas VR 4">
+        <div class="card-body">
+          <h5 class="card-title">Gafas de Realidad Virtual Profesionales</h5>
+          <p class="card-text">Las gafas de realidad virtual profesionales están diseñadas para aplicaciones comerciales y de diseño. Con precisión y rendimiento superiores, te permiten visualizar y interactuar con modelos 3D de manera realista.</p>
+          <p class="card-text">Especificaciones técnicas:</p>
+          <ul>
+            <li>Compatibilidad: PC, estaciones de trabajo</li>
+            <li>Resolución de alta definición</li>
+            <li>Seguimiento de posición y gestos</li>
+          </ul>
+          <p class="card-text">Características destacadas:</p>
+          <ul>
+            <li>Interfaz de usuario intuitiva</li>
+            <li>Compatibilidad con software de diseño 3D</li>
+            <li>Aplicaciones en arquitectura, medicina, diseño industrial, etc.</li>
+          </ul>
+          <a href="/carrito" class="btn btn-success">Comprar Ahora</a>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
  <!-- ======= Testimonials Section ======= -->
  <section id="testimonials" class="testimonials section-bg">
   <div class="container">
