--- a/src/app/componentes/catalogo/relojes/relojes.component.html
+++ b/src/app/componentes/catalogo/relojes/relojes.component.html
@@ -9,7 +9,7 @@
     <!-- Modelo de reloj táctil 1 -->
     <div class="col-md-6 mb-4">
       <div class="card h-100">
-        <img src="assets\img\relojes\relojes (5).jpg" class="card-img-top" alt="Reloj Táctil 1">
+        <img src="assets\img\relojes\relojes (5).jpg" class="card-img-top" alt="Reloj Táctil 1" style="height: 300px;">
         <div class="card-body">
           <h5 class="card-title">Reloj Táctil Deportivo</h5>
           <p class="card-text">El reloj táctil deportivo es perfecto para monitorear tu actividad física diaria. Con funciones avanzadas y un diseño resistente, te acompaña en cada paso.</p>
@@ -33,7 +33,7 @@
     <!-- Modelo de reloj táctil 2 -->
     <div class="col-md-6 mb-4">
       <div class="card h-100">
-        <img src="assets\img\relojes\relojes (4).jpg" class="card-img-top" alt="Reloj Táctil 2">
+        <img src="assets\img\relojes\relojes (4).jpg" class="card-img-top" alt="Reloj Táctil 2" style="height: 300px;">
         <div class="card-body">
           <h5 class="card-title">Reloj Táctil Elegante</h5>
           <p class="card-text">El reloj táctil elegante combina estilo y funcionalidad. Con un diseño minimalista y características inteligentes, es el complemento perfecto para tu estilo de vida.</p>
@@ -57,7 +57,7 @@
     <!-- Modelo de reloj táctil 3 -->
     <div class="col-md-6 mb-4">
       <div class="card h-100">
-        <img src="assets\img\relojes\relojes (3).jpg" class="card-img-top" alt="Reloj Táctil 3">
+        <img src="assets\img\relojes\relojes (3).jpg" class="card-img-top" alt="Reloj Táctil 3" style="height: 300px;">
         <div class="card-body">
           <h5 class="card-title">Reloj Táctil De Lujo</h5>
           <p class="card-text">El reloj táctil de lujo combina artesanía excepcional con tecnología de última generación. Con un diseño exquisito y funciones avanzadas, es una declaración de estilo.</p>
@@ -81,7 +81,7 @@
     <!-- Modelo de reloj táctil 4 -->
     <div class="col-md-6 mb-4">
       <div class="card h-100">
-        <img src="assets\img\relojes\relojes (8).jpg" class="card-img-top" alt="Reloj Táctil 4">
+        <img src="assets\img\relojes\relojes (8).jpg" class="card-img-top" alt="Reloj Táctil 4" style="height: 300px;">
         <div class="card-body">
           <h5 class="card-title">Reloj Táctil Casual</h5>
           <p class="card-text">El reloj táctil de aventura es tu compañero para explorar el mundo. Con funciones específicas para actividades al aire libre y un diseño resistente, está listo para cualquier desafío.</p>
@@ -104,7 +104,6 @@
 
   </div>
 </div>
-
 
 
 
