--- a/src/app/componentes/catalogo/impresora/impresora.component.html
+++ b/src/app/componentes/catalogo/impresora/impresora.component.html
@@ -78,7 +78,7 @@
     <!-- Modelo de impresora 3D 4 -->
     <div class="col-md-6 mb-4">
       <div class="card h-100">
-        <img src="assets\img\impresora\Impresora (1).jpg" class="card-img-top" alt="Impresora 3D 4">
+        <img src="assets\img\impresora\impresora23.jpg" class="card-img-top" alt="Impresora 3D 4">
         <div class="card-body">
           <h5 class="card-title">Impresora 3D Industrial</h5>
           <p class="card-text">La impresora 3D Industrial está diseñada para la producción en masa y la fabricación de piezas de gran tamaño. Potente y eficiente, es la elección de los profesionales.</p>
