--- a/src/app/componentes/home/home.component.html
+++ b/src/app/componentes/home/home.component.html
@@ -1,68 +1,68 @@
 <app-nabvar></app-nabvar>
 
-<section id="hero">
-    <div id="heroCarousel" data-bs-interval="5000" class="carousel slide carousel-fade" data-bs-ride="carousel">
-  
-      <div class="carousel-inner" role="listbox">
-  
-        <!-- Slide 1 -->
-        <div class="carousel-item active" style="background-image: url(assets/img/slide/impreHome1.jpg);">
-          <div class="carousel-container">
-            <div class="carousel-content animate__animated animate__fadeInUp">
-              <h2>Bienvenido a <span>Bytebazaar</span></h2>
-              <p>Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
-              <div class="text-center"><a href="" class="btn-get-started">Leer mas</a></div>
-            </div>
-          </div>
-        </div>
-  
-        <!-- Slide 2 -->
-        <div class="carousel-item" style="background-image: url(assets/img/slide/gafasHome2.jpg);">
-          <div class="carousel-container">
-            <div class="carousel-content animate__animated animate__fadeInUp">
-              <h2>Lorem Ipsum Dolor</h2>
-              <p>Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
-              <div class="text-center"><a href="" class="btn-get-started">Read More</a></div>
-            </div>
-          </div>
-        </div>
-  
-        <!-- Slide 3 -->
-        <div class="carousel-item" style="background-image: url(assets/img/slide/movHome3.jpg);">
-          <div class="carousel-container">
-            <div class="carousel-content animate__animated animate__fadeInUp">
-              <h2>Sequi ea ut et est quaerat</h2>
-              <p>Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
-              <div class="text-center"><a href="" class="btn-get-started">Read More</a></div>
-            </div>
-          </div>
-        </div>
+<section id="hero" style="height: 600px;"> <!-- Ajusta la altura como desees -->
+  <div id="heroCarousel" data-bs-interval="5000" class="carousel slide carousel-fade" data-bs-ride="carousel">
 
-        <!-- Slide 4 -->
-        <div class="carousel-item" style="background-image: url(assets/img/slide/relojesHome4.jpg);">
-          <div class="carousel-container">
-            <div class="carousel-content animate__animated animate__fadeInUp">
-              <h2>Sequi ea ut et est quaerat</h2>
-              <p>Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
-              <div class="text-center"><a href="" class="btn-get-started">Read More</a></div>
-            </div>
+    <div class="carousel-inner" role="listbox">
+
+      <!-- Slide 1 -->
+      <div class="carousel-item active" style="background-image: url(assets/img/slide/gafas5.1.jpg); height: 100%;">
+        <div class="carousel-container">
+          <div class="carousel-content animate__animated animate__fadeInUp">
+            <h2>Bienvenido a <span>Bytebazaar</span></h2>
+            <p>Bienvenido a Bytebazaar, tu destino para tecnología innovadora. Descubre una amplia gama de productos, desde gafas VR y móviles de última generación hasta impresoras 3D y relojes táctiles. En Bytebazaar, nos dedicamos a ofrecerte lo mejor en tecnología para satisfacer todas tus necesidades digitales. ¡Explora nuestro catálogo y haz realidad tus sueños tecnológicos!</p>
+            <div class="text-center"><a href="/gafas" class="btn-get-started">Leer mas</a></div>
           </div>
         </div>
-  
       </div>
-  
-      <a class="carousel-control-prev" href="#heroCarousel" role="button" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon bi bi-chevron-left" aria-hidden="true"></span>
-      </a>
-  
-      <a class="carousel-control-next" href="#heroCarousel" role="button" data-bs-slide="next">
-        <span class="carousel-control-next-icon bi bi-chevron-right" aria-hidden="true"></span>
-      </a>
-  
-      <ol class="carousel-indicators" id="hero-carousel-indicators"></ol>
-  
+
+      <!-- Slide 2 -->
+      <div class="carousel-item" style="background-image: url(assets/img/slide/Impresora.jpg); height: 100%;">
+        <div class="carousel-container">
+          <div class="carousel-content animate__animated animate__fadeInUp">
+            <h2>Bienvenido a <span>Bytebazaar</span></h2>
+            <p>Bienvenido a Bytebazaar, tu destino para tecnología innovadora. Descubre una amplia gama de productos, desde gafas VR y móviles de última generación hasta impresoras 3D y relojes táctiles. En Bytebazaar, nos dedicamos a ofrecerte lo mejor en tecnología para satisfacer todas tus necesidades digitales. ¡Explora nuestro catálogo y haz realidad tus sueños tecnológicos!</p>
+            <div class="text-center"><a href="/impresora" class="btn-get-started">Leer mas</a></div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Slide 3 -->
+      <div class="carousel-item" style="background-image: url(assets/img/slide/movHome3.jpg); height: 100%;">
+        <div class="carousel-container">
+          <div class="carousel-content animate__animated animate__fadeInUp">
+            <h2>Bienvenido a <span>Bytebazaar</span></h2>
+            <p>Bienvenido a Bytebazaar, tu destino para tecnología innovadora. Descubre una amplia gama de productos, desde gafas VR y móviles de última generación hasta impresoras 3D y relojes táctiles. En Bytebazaar, nos dedicamos a ofrecerte lo mejor en tecnología para satisfacer todas tus necesidades digitales. ¡Explora nuestro catálogo y haz realidad tus sueños tecnológicos!</p>
+            <div class="text-center"><a href="/moviles" class="btn-get-started">Leer mas</a></div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Slide 4 -->
+      <div class="carousel-item" style="background-image: url(assets/img/slide/relojesHome4.jpg); height: 100%;">
+        <div class="carousel-container">
+          <div class="carousel-content animate__animated animate__fadeInUp">
+            <h2>Bienvenido a <span>Bytebazaar</span></h2>
+            <p>Bienvenido a Bytebazaar, tu destino para tecnología innovadora. Descubre una amplia gama de productos, desde gafas VR y móviles de última generación hasta impresoras 3D y relojes táctiles. En Bytebazaar, nos dedicamos a ofrecerte lo mejor en tecnología para satisfacer todas tus necesidades digitales. ¡Explora nuestro catálogo y haz realidad tus sueños tecnológicos!</p>
+            <div class="text-center"><a href="/relojes" class="btn-get-started">Leer mas</a></div>
+          </div>
+        </div>
+      </div>
+
     </div>
-  </section>
+
+    <a class="carousel-control-prev" href="#heroCarousel" role="button" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon bi bi-chevron-left" aria-hidden="true"></span>
+    </a>
+
+    <a class="carousel-control-next" href="#heroCarousel" role="button" data-bs-slide="next">
+      <span class="carousel-control-next-icon bi bi-chevron-right" aria-hidden="true"></span>
+    </a>
+
+    <ol class="carousel-indicators" id="hero-carousel-indicators"></ol>
+
+  </div>
+</section>
   <!-- End Hero -->
 
     <!-- ======= About Us Section ======= -->
