--- a/src/app/componentes/contacto/contacto.component.html
+++ b/src/app/componentes/contacto/contacto.component.html
@@ -8,44 +8,36 @@
   
     <!-- ======= Contact Section ======= -->
     <div class="map-section">
-      <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" allowfullscreen></iframe>
+      <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3109.144897660649!2d-0.3913567846823594!3d39.45889637948529!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd605f8b5b40b7b3%3A0x8f3c45293b90fa1a!2sC%2F%20de%20l'Arxiduc%20Carles%2C%202%2C%2011%2C%2046018%20Val%C3%A8ncia!5e0!3m2!1sen!2ses!4v1646093328339!5m2!1sen!2ses" frameborder="0" allowfullscreen></iframe>
     </div>
   
+    <!-- Sección de contacto -->
     <section id="contact" class="contact">
       <div class="container">
-  
         <div class="row justify-content-center" data-aos="fade-up">
-  
           <div class="col-lg-6">
             <!-- Contenido de la columna izquierda -->
             <div class="info-wrap">
               <h3>Equipo de Trabajo</h3>
-              <p>
-                En nuestra tienda de tecnología, cada miembro del equipo aporta conocimientos y habilidades únicas para ofrecer una experiencia excepcional a los clientes. Trabajamos en conjunto para mantenernos actualizados en un campo en constante evolución y para brindar un servicio que inspire confianza y fidelidad. Nuestra diversidad fortalece nuestra capacidad para satisfacer las necesidades tecnológicas de todos nuestros clientes. Juntos, impulsamos el éxito de la tienda y promovemos la innovación en el mundo de la tecnología.</p>
+              <p>En nuestra tienda de tecnología, cada miembro del equipo aporta conocimientos y habilidades únicas para ofrecer una experiencia excepcional a los clientes. Trabajamos en conjunto para mantenernos actualizados en un campo en constante evolución y para brindar un servicio que inspire confianza y fidelidad. Nuestra diversidad fortalece nuestra capacidad para satisfacer las necesidades tecnológicas de todos nuestros clientes. Juntos, impulsamos el éxito de la tienda y promovemos la innovación en el mundo de la tecnología.</p>
             </div>
           </div>
-  
           <div class="col-lg-6">
             <!-- Contenido de la columna derecha -->
             <div class="info-wrap">
               <img src="assets/img/empleados.jpg" alt="Equipo de Trabajo">
             </div>
           </div>
-  
         </div>
-  
       </div>
     </section><!-- End Contact Section -->
   
     <!-- Resto del contenido -->
   
-    <section id="contacto2" class="contact">
+    <section id="contacto2" class="contact mt-5"> <!-- Agrega la clase mt-5 para reducir el espacio -->
       <div class="container">
-  
         <div class="row justify-content-center" data-aos="fade-up">
-  
           <div class="col-lg-10">
-  
             <div class="info-wrap">
               <div class="row">
                 <div class="col-lg-4 info">
@@ -53,13 +45,11 @@
                   <h4>Localzación:</h4>
                   <p>C/ de l'Arxiduc Carles, 2, 11, <br>Patraix, 46018 València</p>
                 </div>
-  
                 <div class="col-lg-4 info mt-4 mt-lg-0">
                   <i class="bi bi-envelope"></i>
                   <h4>Email:</h4>
                   <p>Bytebazaargmail.com</p> <!-- Aquí agregué el cierre de la etiqueta p -->
                 </div>
-  
                 <div class="col-lg-4 info mt-4 mt-lg-0">
                   <i class="bi bi-phone"></i>
                   <h4>Teléfono:</h4>
@@ -67,12 +57,9 @@
                 </div>
               </div>
             </div>
-  
           </div>
-  
         </div>
-  
-        <div class="row mt-5 justify-content-center" data-aos="fade-up">
+        <div class="row mt-4 justify-content-center" data-aos="fade-up"> <!-- Ajusta el margen superior aquí -->
           <div class="col-lg-10">
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
@@ -97,11 +84,15 @@
               <div class="text-center"><button type="submit">Enviar Mensaje</button></div>
             </form>
           </div>
-  
         </div>
-  
       </div>
     </section><!-- End Contact Section -->
+  
+    <!-- Bootstrap JS y dependencias -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  ><!-- End Contact Section -->
   
   </main><!-- End #main -->
   </body>
