--- a/src/app/componentes/registro/registro.component.css
+++ b/src/app/componentes/registro/registro.component.css
@@ -1,81 +1,64 @@
-.contenedor{
-    width: 100%;
-  
-  }
-  
-  .formulario {
-        background-size: cover;
-        margin: auto;
-        width: 90%;
-        max-width: 500px;
-        margin-top: 20px;
-        padding: 20px;
-        border-radius: 10px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    }
-  
-  
-  h1{
-    font-family: 'Arial', sans-serif;
-    text-align: center;
-    color: #333333;
-    font-size: 40px;
-  }
-  input[type="text"],
-  input[type="password"]{
-    font-size: 20px;
-    width: 82%;
-    padding: 10px;
-    border: none;
-  }
-  .input-contenedor{
-    margin-bottom: 15px;
-  
-  
-  
-  }
-  .icon{
-    min-width: 50px;
-    text-align: center;
-    color: #999;
-  }
-  .button{
-  
-    border: none;
-    width: 100%;
-    color: white;
-    font-size: 20px;
-    background: #333333;
-    padding: 15px 20px;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  .button:hover{
-    background: #1bbd36;
-  }
-  p{
-    text-align: center;
-  }
-  .link{
-    text-decoration: none;
-    color: #333333;
-    font-weight: 600;
-  }
-  .link:hover{
-    color: #1bbd36;
-  }
-  
-  .Edad{
-    margin-left: 55px;
-  }
-  
-  @media(min-width:768px)
-  {
-    .formulario{
-        margin: auto;
-        width: 500px;
-        margin-top: 150px;
-        border-radius: 2%;
-        background-size: cover;
-    }
-  }
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f9f9f9;
+  margin: 0;
+  padding: 0;
+}
+.formulario {
+  max-width: 500px;
+  margin: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+h1 {
+  font-family: 'Arial', sans-serif;
+  text-align: center;
+  color: #333333;
+  font-size: 40px;
+}
+input[type="text"],
+input[type="password"] {
+  font-size: 20px;
+  width: 100%;
+  padding: 10px;
+  border: none;
+  border-bottom: 1px solid #aaa;
+}
+.input-contenedor {
+  margin-bottom: 15px;
+}
+.icon {
+  min-width: 50px;
+  text-align: center;
+  color: #999;
+}
+.button {
+  border: none;
+  width: 100%;
+  color: white;
+  font-size: 20px;
+  background: #333333;
+  padding: 15px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.button:hover {
+  background: #1bbd36;
+}
+p {
+  text-align: center;
+}
+.link {
+  text-decoration: none;
+  color: #333333;
+  font-weight: 600;
+}
+.link:hover {
+  color: #1bbd36;
+}
+.Edad {
+  margin-left: 55px;
+}
