--- a/src/app/componentes/registro/registro.component.html
+++ b/src/app/componentes/registro/registro.component.html
@@ -1,41 +1,41 @@
 <app-nabvar></app-nabvar>
 
-
-<form class="formulario">
-
-    <h1>REGISTRARSE</h1>
-    <div class="contenedor">
-
-        <div class="input-contenedor">
-            <i class="fas fa-user icon"></i>
-            <input type="text" placeholder="Nombre y apellidos">
-
+<br><br><br><br><br>
+<body>
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-6">
+          <div class="formulario">
+            <h1>REGISTRARSE</h1>
+            <div class="contenedor">
+              <div class="input-contenedor">
+                <i class="fas fa-user icon"></i>
+                <input type="text" class="form-control" placeholder="Nombre y apellidos">
+              </div>
+              <div class="input-contenedor">
+                <i class="fas fa-user icon"></i>
+                <input type="text" class="form-control" placeholder="Nombre de Usuario">
+              </div>
+              <div class="input-contenedor">
+                <i class="fas fa-envelope icon"></i>
+                <input type="text" class="form-control" placeholder="Correo Electronico">
+              </div>
+              <div class="input-contenedor">
+                <i class="fas fa-key icon"></i>
+                <input type="password" class="form-control" placeholder="Contraseña">
+              </div>
+              <input type="checkbox"  name="Edad" class="Edad"> Certifico que soy mayor de 18 años.
+              <input type="submit" value="Registrarse" class="btn btn-primary button">
+              <p>Al registrarte, aceptas nuestras condiciones de uso y política de privacidad.</p>
+              <p>¿Ya tienes una cuenta?<a href="/login">Iniciar Sesión</a></p>
+            </div>
+          </div>
         </div>
-
-        <div class="input-contenedor">
-            <i class="fas fa-user icon"></i>
-            <input type="text" placeholder="Nombre de Usuario">
-
-
-        </div>
-
-
-
-        <div class="input-contenedor">
-            <i class="fas fa-envelope icon"></i>
-            <input type="text" placeholder="Correo Electronico">
-
-        </div>
-
-        <div class="input-contenedor">
-            <i class="fas fa-key icon"></i>
-            <input type="password" placeholder="Contraseña">
-
-        </div>
-        <input type="checkbox"  name="Edad" class="Edad"> Certifico que soy mayor de 18 años.
-        <input type="submit" value="Registrarse" class="button">
-        <p>Al registrarte, aceptas nuestras condiciones de uso y política de privacidad.</p>
-        <p>¿Ya tienes una cuenta?<a href="/login">Iniciar Sesión</a></p>
+      </div>
     </div>
-
-</form>
+  
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  </body>
+ 
